fixed overlapping of main menu mobile buttons

--- a/ui/src/app/pages/main-menu/main-menu.component.css
+++ b/ui/src/app/pages/main-menu/main-menu.component.css
@@ -36,3 +36,8 @@ h2{
 
 
 
+@media screen and (max-width: 415px) {
+  .btn-row{
+    display: flex;
+  }
+}
